# SERE

./: .gitignore  CPATT_dataset_format.ipynb  README.md  RUN_README.md  env.env  main.py  pyproject.toml  requirements.txt  sere.py
utils/: cot_synthesis.py  dataset_preprocess.py  llm.py  prompt.py  retrievers.py  syntactic.py
utils/conceptnet/: to_neo4j.py  vecdb.py
